<resources>
    <string name="app_name">shoes-store-app</string>
    <string name="hello_again">Hello again.</string>
    <string name="welcome_back">Welcome back.</string>
    <string name="email_address">EMAIL ADDRESS</string>
    <string name="password">PASSWORD</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign up</string>
    <string name="new_to_friendly_desi">New to Friendly Desi?</string>
    <string name="sign_in">Sign in</string>
    <string name="full_name">FULL NAME</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="all_categories">All Categories</string>
    <string name="chicago_il_60611_usa">Chicago, IL 60611, USA</string>
    <string name="full_name_user">Họ và tên</string>
    <string name="email">Email</string>
    <string name="password_regis">Mật khẩu</string>
    <string name="address">Địa chỉ</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="regis">Đăng ký</string>
    <string name="person">person</string>
    <string name="home">home</string>
    <string name="order">Đặt hàng</string>
    <string name="update">Cập nhập</string>
    <string name="user_name">Tên người dùng</string>
    <string name="remember_password">Nhớ mật khẩu</string>
    <string name="todo">TODO</string>
    <string name="product">Tên sản phẩm</string>
    <string name="import_price">Giá nhập</string>
    <string name="price">giá bán</string>
    <string name="add_product">Thêm sản phẩm</string>
    <string name="color">Màu</string>
    <string name="size">Kích thước</string>
    <string name="num">Số lượng</string>
    <string name="sale">Khuyến mại</string>
    <string name="ok">Đã xác nhận</string>
    <string name="confirm">Xác nhận</string>
    <string-array name="genders">
        <item>Nam</item>
        <item>Nữ</item>
    </string-array>
</resources>