<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_shoes"/>

        <TextView
            android:id="@+id/txt_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/product"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/edt_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/color"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/edt_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/size"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/edt_numItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/num"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/edt_sale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sale"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btn_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/update"
            android:layout_marginTop="30dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"/>
    </LinearLayout>

</ScrollView>